added responsiveness meta tag

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Auxano Digital Services</title>
+	<meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a6644ebd9c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Auxano Digital Services</title>
 </head>
 <body>
 	<!--HEADER NAV SECTION-->
 	<header>
-		
-			<h1 class="logo"><img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services"></h1>
+		<h1 class="logo"><img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services"></h1>
 		
 	</header> 
 
