--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a6644ebd9c.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Auxano Digital Services</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
 						<h2>auxano digital services</h2>
 						<p>We pride ourselves on delivering innovative digital experiences that make an impact, and unlock value through creativity, technology, and business-minded thinking.</p>
 					</div>
-					<a class="btn" href="#">work with us</a>
+					<a class="btn hero-cta" href="contact-us.html">work with us</a>
 				</div>
 			</div>
 		</section>
