linked logo img to homepage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 	<!--HEADER NAV SECTION-->
 	<header>
-		<h1 class="logo"><img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services"></h1>
+		<h1 class="logo">
+			<a href="index.html">
+				<img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services">
+			</a>
+		</h1>
 		
 	</header> 
 
