--- a/contact-us.html
+++ b/contact-us.html
@@ -11,7 +11,11 @@
 
     	<!--HEADER NAV SECTION-->
 		<header>
-			<h1 class="logo"><img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services"></h1>		
+			<h1 class="logo">
+				<a href="index.html">
+					<img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services">
+				</a>
+			</h1>		
 		</header>
 
 		<!--MAIN CONTENT SECTION-->
