--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Untitled</title>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/a6644ebd9c.js" crossorigin="anonymous"></script>
+        <title>Contact Us</title>
         <link rel="stylesheet" href="css/contact-us.css">
     </head>
     <body>
