added alt info to images

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 			<div class="container">
 				<!--Service 1-->
 				<div class="service-container">
-					<img src="https://img.icons8.com/ios/50/000000/laptop-coding.png"/>
+					<img src="https://img.icons8.com/ios/50/000000/laptop-coding.png" alt="laptop icon" />
 					<h3 class="service-heading">website design & development</h3>
 					<p class="service-text">We'll help you stand out from the crowd and create the very best experience for your website visitors. We design and develop market leading websites that deliver a great first impression and convert visitors into customers.</p>
 				</div>
 
 				<!--Service 2-->
 				<div class="service-container">
-					<img src="https://img.icons8.com/dotty/80/000000/advanced-search.png"/>
+					<img src="https://img.icons8.com/dotty/80/000000/advanced-search.png" alt="mechanical gear icon" />
 					<h3 class="service-heading">search engine optimization</h3>
 					<p class="service-text">Having a good website is just the start. Your customers and prospects need to be able to find your wesbite among the millions of other websites that exist on the internet. The most effective way to achieve this is to optimize your site for search engines.</p>
 				</div>
 				
 				<!--Service 3-->
 				<div class="service-container">
-					<img src="https://img.icons8.com/wired/64/000000/training.png"/>
+					<img src="https://img.icons8.com/wired/64/000000/training.png" alt="someone in front of a board training people" />
 					<h3 class="service-heading">digital training & web development academy</h3>
 					<p class="service-text">Our academy focuses on equipping students with digital marketing, web development, machine learning and data science skills.</p>
 				</div>
 
 				<!--Service 4-->
 				<div class="service-container">
-					<img src="https://img.icons8.com/wired/64/000000/online-support.png"/>
+					<img src="https://img.icons8.com/wired/64/000000/online-support.png" alt="customer care personnel wearing a head-piece" />
 					<h3 class="service-heading">support + hosting</h3>
 					<p class="service-text">We take care of the technical stuff, so you can focus on the fun stuff.
 					Our ongoing website support and maintenance services provide a resource for any technical issue that may arise for your business.  We offer several monthly website maintenance plans that include 24/7 web uptime, downtime, and performance monitoring. In addition, we handle backups, malware and virus scanning, protection from hackers, broken link fixes, domain name management and much more.
