added for attr to form labels and input id attr

--- a/contact-us.html
+++ b/contact-us.html
@@ -68,32 +68,32 @@
 
 	    			<!--  name -->
 	    			<div class="input-container">
-	    				<label>your name (required)</label>
-	    				<input type="" name="">
+	    				<label for="name">your name (required)</label>
+	    				<input type="text" name="name" id="name">
 	    			</div>
 
 	    			<!-- email  -->
 	    			<div class="input-container">
-	    				<label>your email (required)</label>
-	    				<input type="" name="">
+	    				<label for="email">your email (required)</label>
+	    				<input type="email" name="email" id="email">
 	    			</div>
 
 	    			<!-- phone  -->
 	    			<div class="input-container">
-	    				<label>phone</label>
-	    				<input type="" name="">
+	    				<label  for="phone">phone</label>
+	    				<input type="number" name="phone" id="phone">
 	    			</div class="input-container">
 
 	    			<!-- subject  -->
 	    			<div class="input-container">
-	    				<label>subject</label>
-	    				<input type="" name="">
+	    				<label for="subject">subject</label>
+	    				<input type="text" name="subject" id="subject">
 	    			</div>
 
 	    			<!-- message  -->
 	    			<div class="input-container">
-	    				<label>message</label>
-	    				<textarea rows="5" cols="10"></textarea>
+	    				<label for="message">message</label>
+	    				<textarea rows="5" cols="10" id="message"></textarea>
 	    			</div>
 	    			
 	    			<button type="submit">Send</button>
