--- a/contact-us.html
+++ b/contact-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
+        <meta name="description" content="Auxano Digital Services is a full Digital Marketing Agency based in Lagos, Nigeria. We offer services in Advertising, Web Development, to Social Media Management">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/a6644ebd9c.js" crossorigin="anonymous"></script>
