made color changes to the css

--- a/index.html
+++ b/index.html
@@ -1,151 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-    <meta name="description" content="Auxano Digital Services is a full Digital Marketing Agency based in Lagos, Nigeria. We offer services in Advertising, Web Development, to Social Media Management">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/a6644ebd9c.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Auxano Digital Services</title>
-</head>
-<body>
-	<!--HEADER NAV SECTION-->
-	<header>
-		<h1 class="logo">
-			<a href="index.html">
-				<img src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png" alt="Auxano Digital Services">
-			</a>
-		</h1>
-		
-	</header> 
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="description"
+			content="Auxano Digital Services is a full Digital Marketing Agency based in Lagos, Nigeria. We offer services in Advertising, Web Development, to Social Media Management"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+		<script
+			src="https://kit.fontawesome.com/a6644ebd9c.js"
+			crossorigin="anonymous"
+		></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<title>Auxano Digital Services</title>
+	</head>
+	<body>
+		<!--HEADER NAV SECTION-->
+		<header>
+			<nav>
+				<h1 class="logo">
+					<a href="index.html">
+						<img
+							src="https://res.cloudinary.com/nefejames/image/upload/v1586876987/Auxano_Digital_u3sh8l.png"
+							alt="Auxano Digital Services"
+						/>
+					</a>
+				</h1>
+			</nav>
+		</header>
 
-	<!--MAIN CONTENT SECTION-->
-	<main>
+		<!--MAIN CONTENT SECTION-->
+		<main>
+			<!--hero section-->
+			<section class="hero-section">
+				<div class="container">
+					<div class="hero-container">
+						<div class="hero-texts">
+							<h2>auxano digital services</h2>
+							<p>
+								We pride ourselves on delivering innovative
+								digital experiences that make an impact, and
+								unlock value through creativity, technology, and
+								business-minded thinking.
+							</p>
+						</div>
+						<a class="btn hero-cta" href="contact-us.html"
+							>work with us</a
+						>
+					</div>
+				</div>
+			</section>
 
-		<!--hero section-->
-		<section class="hero-section">
+			<!--services section-->
+			<section class="services-section">
+				<div class="container">
+					<!--Service 1-->
+					<div class="service-container">
+						<img
+							src="https://img.icons8.com/ios/50/000000/laptop-coding.png"
+							alt="laptop icon"
+						/>
+						<h3 class="service-heading">
+							website design & development
+						</h3>
+						<p class="service-text">
+							We'll help you stand out from the crowd and create
+							the very best experience for your website visitors.
+							We design and develop market leading websites that
+							deliver a great first impression and convert
+							visitors into customers.
+						</p>
+					</div>
+
+					<!--Service 2-->
+					<div class="service-container">
+						<img
+							src="https://img.icons8.com/dotty/80/000000/advanced-search.png"
+							alt="mechanical gear icon"
+						/>
+						<h3 class="service-heading">
+							search engine optimization
+						</h3>
+						<p class="service-text">
+							Having a good website is just the start. Your
+							customers and prospects need to be able to find your
+							wesbite among the millions of other websites that
+							exist on the internet. The most effective way to
+							achieve this is to optimize your site for search
+							engines.
+						</p>
+					</div>
+
+					<!--Service 3-->
+					<div class="service-container">
+						<img
+							src="https://img.icons8.com/wired/64/000000/training.png"
+							alt="someone in front of a board training people"
+						/>
+						<h3 class="service-heading">
+							digital training & web development academy
+						</h3>
+						<p class="service-text">
+							Our academy focuses on equipping students with
+							digital marketing, web development, machine learning
+							and data science skills.
+						</p>
+					</div>
+
+					<!--Service 4-->
+					<div class="service-container">
+						<img
+							src="https://img.icons8.com/wired/64/000000/online-support.png"
+							alt="customer care personnel wearing a head-piece"
+						/>
+						<h3 class="service-heading">support + hosting</h3>
+						<p class="service-text">
+							We take care of the technical stuff, so you can
+							focus on the fun stuff. Our ongoing website support
+							and maintenance services provide a resource for any
+							technical issue that may arise for your business. We
+							offer several monthly website maintenance plans that
+							include 24/7 web uptime, downtime, and performance
+							monitoring. In addition, we handle backups, malware
+							and virus scanning, protection from hackers, broken
+							link fixes, domain name management and much more.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<!--OUR PROJECTS-->
+			<section class="projects-section">
+				<div class="container">
+					<!--project one-->
+					<div class="project-container">
+						<div class="project-details">
+							<h3 class="project-heading">
+								frontend mentor - huddle
+							</h3>
+							<p class="proj">
+								Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit. Eveniet laborum aut aperiam
+								ratione quos itaque architecto. Impedit nesciunt
+								sapiente quos.
+							</p>
+						</div>
+						<a class="btn" href="https://fe-mentor-site.netlify.com"
+							>view project</a
+						>
+					</div>
+
+					<!--project two-->
+					<div class="project-container">
+						<div class="project-details">
+							<h3 class="project-heading">project ayuda</h3>
+							<p class="proj">
+								A non-profit organization,
+								<span>project ayuda</span>, tasked us with
+								developing their online presence.
+							</p>
+						</div>
+						<a
+							class="btn"
+							href="https://nefejames.github.io/project-ayuda"
+							>view project</a
+						>
+					</div>
+
+					<!--project three-->
+					<div class="project-container">
+						<div class="project-details">
+							<h3 class="project-heading">the gates' college</h3>
+							<p class="proj">
+								Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit. Possimus quidem accusantium,
+								consequatur blanditiis. Perspiciatis iure
+								laborum, aut voluptates minus ducimus sit eos.
+								Itaque cupiditate nisi dignissimos eligendi
+								quisquam quidem voluptates!
+							</p>
+						</div>
+						<a class="btn" href="#">view project</a>
+					</div>
+
+					<!--project four-->
+					<div class="project-container">
+						<div class="project-details">
+							<h3 class="project-heading">
+								geosearch software application
+							</h3>
+							<p class="proj">
+								A web app that makes use of Google Maps and
+								OpenWeather APIs.
+							</p>
+						</div>
+						<a
+							class="btn"
+							href="https://nefejames.github.io/DevC-GeoSearch"
+							>view project</a
+						>
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<footer>
 			<div class="container">
-				<div class="hero-container">
-					<div class="hero-texts">
-						<h2>auxano digital services</h2>
-						<p>We pride ourselves on delivering innovative digital experiences that make an impact, and unlock value through creativity, technology, and business-minded thinking.</p>
-					</div>
-					<a class="btn hero-cta" href="contact-us.html">work with us</a>
+				<h3>contact us</h3>
+
+				<!--social media links-->
+				<div class="social">
+					<ul class="social-links">
+						<li class="social-link">
+							<a href="#"><i class="fab fa-facebook"></i></a>
+						</li>
+						<li class="social-link">
+							<a href="#"><i class="fab fa-twitter"></i> </a>
+						</li>
+						<li class="social-link">
+							<a href="#"><i class="fab fa-instagram"></i></a>
+						</li>
+					</ul>
 				</div>
+
+				<!--contact us-->
+				<div class="contact-us">
+					<p>call us: 08100539431</p>
+					<p>eputu, ibeju-lekki, lagos</p>
+				</div>
+
+				<p class="copyright">&copy auxano digital services</p>
 			</div>
-		</section>
-
-		<!--services section-->
-		<section class="services-section">
-			<div class="container">
-				<!--Service 1-->
-				<div class="service-container">
-					<img src="https://img.icons8.com/ios/50/000000/laptop-coding.png" alt="laptop icon" />
-					<h3 class="service-heading">website design & development</h3>
-					<p class="service-text">We'll help you stand out from the crowd and create the very best experience for your website visitors. We design and develop market leading websites that deliver a great first impression and convert visitors into customers.</p>
-				</div>
-
-				<!--Service 2-->
-				<div class="service-container">
-					<img src="https://img.icons8.com/dotty/80/000000/advanced-search.png" alt="mechanical gear icon" />
-					<h3 class="service-heading">search engine optimization</h3>
-					<p class="service-text">Having a good website is just the start. Your customers and prospects need to be able to find your wesbite among the millions of other websites that exist on the internet. The most effective way to achieve this is to optimize your site for search engines.</p>
-				</div>
-				
-				<!--Service 3-->
-				<div class="service-container">
-					<img src="https://img.icons8.com/wired/64/000000/training.png" alt="someone in front of a board training people" />
-					<h3 class="service-heading">digital training & web development academy</h3>
-					<p class="service-text">Our academy focuses on equipping students with digital marketing, web development, machine learning and data science skills.</p>
-				</div>
-
-				<!--Service 4-->
-				<div class="service-container">
-					<img src="https://img.icons8.com/wired/64/000000/online-support.png" alt="customer care personnel wearing a head-piece" />
-					<h3 class="service-heading">support + hosting</h3>
-					<p class="service-text">We take care of the technical stuff, so you can focus on the fun stuff.
-					Our ongoing website support and maintenance services provide a resource for any technical issue that may arise for your business.  We offer several monthly website maintenance plans that include 24/7 web uptime, downtime, and performance monitoring. In addition, we handle backups, malware and virus scanning, protection from hackers, broken link fixes, domain name management and much more.
-					</p>
-				</div>
-			</div>
-		</section>
-
-		<!--OUR PORTFOLIO-->
-		<section class="portfolio-section">
-			<div class="container">
-				<!--project one-->
-				<div class="project-container">
-					<div class="project-details">
-						<h3 class="project-heading">frontend mentor - huddle</h3>
-						<p class="proj">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet laborum aut aperiam ratione quos itaque architecto. Impedit nesciunt sapiente quos.</p>
-					</div>
-					<a class="btn" href="https://fe-mentor-site.netlify.com">view project</a>
-				</div>
-
-				<!--project two-->
-				<div class="project-container">
-					<div class="project-details">
-						<h3 class="project-heading">project ayuda</h3>
-						<p class="proj">A non-profit organization, <span>project ayuda</span>, tasked us with developing their online presence.</p>
-					</div>
-					<a class="btn" href="https://nefejames.github.io/project-ayuda">view project</a>
-				</div>
-
-				<!--project three-->
-				<div class="project-container">
-					<div class="project-details">
-						<h3 class="project-heading">the gates' college</h3>
-						<p class="proj">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quidem accusantium, consequatur blanditiis. Perspiciatis iure laborum, aut voluptates minus ducimus sit eos. Itaque cupiditate nisi dignissimos eligendi quisquam quidem voluptates!</p>
-					</div>
-					<a class="btn" href="#">view project</a>
-				</div>
-
-				<!--project four-->
-				<div class="project-container">
-					<div class="project-details">
-						<h3 class="project-heading">geosearch software application</h3>
-						<p class="proj">A web app that makes use of Google Maps and OpenWeather APIs.</p>
-					</div>
-					<a class="btn" href="https://nefejames.github.io/DevC-GeoSearch">view project</a>
-				</div>
-			</div>
-		</section>
-	</main>
-
-	<footer>
-		<div class="container">
-			<h3>contact us</h3>
-
-			<!--social media links-->
-			<div class="social">
-				<ul class="social-links">
-					<li class="social-link">
-						<a href="#"><i class="fab fa-facebook"></i></a>
-					</li>
-					<li class="social-link">
-						<a href="#"><i class="fab fa-twitter"></i> </a>
-					</li>
-					<li class="social-link">
-						<a href="#"><i class="fab fa-instagram"></i></a>
-					</li>
-				</ul>
-			</div>
-
-			<!--contact us-->
-			<div class="contact-us">
-				<p>call us: 08100539431</p>
-				<p>eputu, ibeju-lekki, lagos</p>
-			</div>
-
-			<p class="copyright">&copy auxano digital services</p>
-		</div>
-	</footer>
-</body>
+		</footer>
+	</body>
 </html>
-
-
-
-
-
-
